--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إدارة الموظفين</title>
-</head>
-<body>
-    <h1>إدارة الموظفين</h1>
+{% extends "base.html" %}
 
-    <!-- إضافة موظف جديد -->
-    <form action="/add_employee" method="POST">
-        <label for="name">اسم الموظف:</label>
-        <input type="text" id="name" name="name" required><br>
+{% block content %}
+<h1>إدارة الموظفين</h1>
 
-        <label for="position">المنصب:</label>
-        <input type="text" id="position" name="position" required><br>
+<!-- إضافة موظف جديد -->
+<form action="/add_employee" method="POST" class="mb-4">
+    <div class="mb-3">
+        <label for="name" class="form-label">اسم الموظف:</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+    </div>
+    <div class="mb-3">
+        <label for="position" class="form-label">المنصب:</label>
+        <input type="text" class="form-control" id="position" name="position" required>
+    </div>
+    <div class="mb-3">
+        <label for="salary" class="form-label">الراتب الأساسي:</label>
+        <input type="number" step="0.01" class="form-control" id="salary" name="salary" required>
+    </div>
+    <div class="mb-3">
+        <label for="years_of_service" class="form-label">سنوات الخدمة:</label>
+        <input type="number" class="form-control" id="years_of_service" name="years_of_service" required>
+    </div>
+    <button type="submit" class="btn btn-primary">إضافة موظف</button>
+</form>
 
-        <label for="salary">الراتب الأساسي:</label>
-        <input type="number" step="0.01" id="salary" name="salary" required><br>
-
-        <label for="years_of_service">سنوات الخدمة:</label>
-        <input type="number" id="years_of_service" name="years_of_service" required><br>
-
-        <button type="submit">إضافة موظف</button>
-    </form>
-
-    <!-- قائمة الموظفين -->
-    <h2>قائمة الموظفين</h2>
-    <table border="1">
+<!-- قائمة الموظفين -->
+<h2>قائمة الموظفين</h2>
+<table class="table table-bordered">
+    <thead>
         <tr>
             <th>الاسم</th>
             <th>المنصب</th>
             <th>الراتب الأساسي</th>
             <th>سنوات الخدمة</th>
         </tr>
+    </thead>
+    <tbody>
         {% for employee in employees %}
         <tr>
             <td>{{ employee[1] }}</td>
@@ -42,8 +44,6 @@
             <td>{{ employee[4] }}</td>
         </tr>
         {% endfor %}
-    </table>
-
-    <a href="/calculate_bonuses">حساب العلاوات والترقيات</a>
-</body>
-</html>
+    </tbody>
+</table>
+{% endblock %}
